--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display:flex;
+  padding:8px 16px;
+  gap:16px;
+  align-items: center;
 }
 
 .profile-image {
@@ -35,6 +39,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin-left:auto;
 }
 
 a {
@@ -45,4 +50,9 @@ a {
 
 ul {
   list-style-type: none;
+  display:flex;
+  gap:16px;
 }
+
+
+
