--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,9 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 32px;
 }
 
 img {
@@ -23,4 +27,16 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.plant-info{
+  display: flex;
+  column-gap: 52px;
+}
+
+.item{
+  max-width: 200px;
+  display:flex;
+  flex-flow: column wrap;
+  align-items: center;
 }
