--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display:flex;
+  flex-flow: column nowrap;
+
 }
 
 img {
@@ -16,6 +19,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  margin: 10px;
+  padding:8px 16px;
 }
 
 input {
@@ -24,4 +29,51 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.footer{
+  display:flex;
+  justify-content: space-between;
+  flex: 0 0 auto;
+  background-color: #eeeeee;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  flex:0 0 auto;
+  padding:16px;
+}
+
+.left-links{
+  display: flex;
+  column-gap: 20px;
+  margin:0;
+  padding: 0;
+}
+
+.right-links{
+  display: flex;
+  column-gap: 20px;
+  margin:0;
+  padding: 0;
+  
+}
+
+ul{
+  list-style-type: none;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1 1 auto;
+  row-gap: 10px;
+  justify-content: center;
+}
+
+a{
+  text-decoration: none;
+  color: #aaaaaa;
 }
