--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,69 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-flow: column nowrap;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  font-weight: 900;
+  padding: 0px 10px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
+  flex: 0 0 auto;
+  padding-left:16px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  max-width: 150px;
+  margin: 16px;
+  padding: 16px;
+}
+
+.content{
+  display:flex;
+  flex-flow: row nowrap;
+  flex: 1 1 auto;
+}
+
+.cards{
+  display: flex;
+  flex-flow: row wrap;
+  padding-left:32px;
+
+}
+
+ul{
+  list-style-type: none;
+  padding: 0px;
+}
+a{
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 24px;
+}
+
+li{
+  margin:15px 0px;
 }
